fixed image caption on small screens

--- a/css/partials/_projects.scss
+++ b/css/partials/_projects.scss
@@ -1,6 +1,7 @@
 #image-card img {
     display: block;
     width: 100%;
+    min-height: 84px;
 }
 
 #image-card {
@@ -15,7 +16,7 @@
 
 figcaption {
     position: absolute;
-    font-size: 60%;
+    font-size: 50%;
     text-align: center;
     bottom: 0;
     right: 0;
@@ -24,5 +25,6 @@ figcaption {
     background: $header-footer-bgcolor;
 	text-align:center;
 	font-weight:bold;
-	opacity:0.7;
+    opacity:0.7;
+    max-height: 30px;
 }
