--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,7 @@ input[type=submit] {
 #image-card img {
   display: block;
   width: 100%;
+  min-height: 84px;
 }
 
 #image-card {
@@ -132,7 +133,7 @@ input[type=submit] {
 
 figcaption {
   position: absolute;
-  font-size: 60%;
+  font-size: 50%;
   text-align: center;
   bottom: 0;
   right: 0;
@@ -142,6 +143,7 @@ figcaption {
   text-align: center;
   font-weight: bold;
   opacity: 0.7;
+  max-height: 30px;
 }
 
 #about-icons {
